Revision history for Perl extension Apache::Dir.

0.05

0.04  2005-09-04T22:10:36
      - Switched to manually defining constants so as to support compatibility
        with mod_perl 2.
      - Eleminated "Subroutine Apache::FakeRequest::header_out redefined"
        warning in tests.

0.03  2004-05-18T23:54:20
      - Updated README to reflect use if Apache::Dir as a Fixup Handler.

0.02  2004-05-18T23:43:39
      - Switched from stat'ing a directory to just checking the content type
        for DIR_MAGIC_TYPE. Suggested by Geoffrey Young.
      - Documentation now suggests using Apache::Dir as a fixup handler.
      - Now requiring mod_perl in Build.PL.
      - Added simple tests using Apache::FakeRequest.
      - Released to CPAN, with thanks to Doug McEachern for assigning the
        namespace to me.

0.01  2004-05-11T12:23:04
      - Initial release, mail list only.