@@ -1,6 +1,8 @@
 Revision history for Perl extension Apache::Dir.
 
 0.05
+     - Added the "configure_requires", "build_requires", and "recommends"
+       parameters to Build.PL.
 
 0.04  2005-09-04T22:10:36
       - Switched to manually defining constants so as to support compatibility
